--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@supabase/supabase-js": "^1.28.5",
     "framer-motion": "^4",
     "next": "12.0.1",
     "react": "17.0.2",
+    "react-countdown-hook": "^1.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.22.0",
     "react-icons": "^4.3.1",
-    "recoil": "^0.5.2"
+    "react-timer-hook": "^3.0.5",
+    "recoil": "^0.5.2",
+    "swr": "^1.1.2-beta.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
